crates/pack/tests/compile_fail/fact_no_new.stderr
error[E0599]: no function or associated item named `construct_unchecked` found for struct `Fact` in the current scope
 --> tests/compile_fail/fact_no_new.rs:7:23
  |
7 |     let _fact = Fact::construct_unchecked(ContextKey::Seeds, "test-id", "test-content");
  |                       ^^^^^^^^^^^^^^^^^^^ function or associated item not found in `Fact`
